missingkids/less/css/application.css
/* ... */
.inner-wrapper:after {
  clear: both;
}
.inner-wrapper > h1,
.inner-wrapper > h2,
.inner-wrapper > h3,
.inner-wrapper > h4,
.inner-wrapper > h5,
.inner-wrapper > h6,
.inner-wrapper > p {
  padding-left: 0;
  padding-right: 0;
}
.inner-wrapper h5 > p {
  font-family: inherit;
  font-weight: inherit;
  line-height: inherit;
  margin: inherit;
}
.inner-wrapper.no-wrapper {
  background: none;
  padding: 0;
}
.base-template .inner-wrapper h1,
.base-template .inner-wrapper h2,
.base-template .inner-wrapper h3,
.base-template .inner-wrapper h4,
.base-template .inner-wrapper h5,
.base-template .inner-wrapper h6,
.base-template .inner-wrapper p {
  padding-left: 0;
  padding-right: 0;
}
.show-grid [class^=col-] {
  padding-top: 10px;
  padding-bottom: 10px;
  background-color: #eee;
  background-color: rgba(86, 61, 124, 0.15);
  border: 1px solid #ddd;
  border: 1px solid rgba(86, 61, 124, 0.2);
}
hr {
  border-bottom: 1px solid #333;
}
@media (min-width: 767px) {
  [class*="col-"] {
    padding-left: 6.5px;
    padding-right: 6.5px;
  }
  .container {
    padding-left: 13px;
    padding-right: 13px;
  }
  .content-wrapper .container {
    padding-left: 0;
    padding-right: 0;
  }
}
@media (max-width: 480px) {
  .inner-wrapper {
    padding: 7px 8px;
  }
  .sponsored-links li {
    margin-bottom: 16px;
  }
}
@media (min-width: 992px) and (orientation: landscape) {
  [class*="col-"] {
    padding-left: 8px;
    padding-right: 8px;
  }
  .container {
    padding-left: 0;
    padding-right: 0;
  }
  .video-image-component .offsetLR-md-1 {
    margin-left: 8.33333333%;
    margin-right: 8.33333333%;
  }
}
.row {
  position: relative;
}
@media (max-width: 480px) {
  .row {
    margin-left: -8px;
    margin-right: -8px;
  }
}
.pub-content img {
  float: left;
  margin: 0 16px 16px 0;
  border-radius: 10px;
  border: 1px solid #939597;
}
.pub-content p {
  display: block;
}
.pub-content p a {
  padding: 0;
  vertical-align: top;
}
.sponsored-links {
  list-style: none;
  padding: 0 0 16px;
  margin: 0 75px;
}
.sponsored-links:before,
.sponsored-links:after {
  content: " ";
  display: table;
}
.sponsored-links:after {
  clear: both;
}
.sponsored-links:before,
.sponsored-links:after {
  content: " ";
  display: table;
}
.sponsored-links:after {
  clear: both;
}
.sponsored-links li {
  text-align: center;
}
.sponsored-links li img {
  width: 64px;
  height: 64px;
}
.three-column .video-image-component .offsetLR-md-1 {
  margin-left: 0;
  margin-right: 0;
}
.three-column .video-image-component .col-md-10 {
  width: 100%;
}
.three-column .video-image-component p {
  padding: 0 16px;
}
.gen-info-list {
  margin-bottom: 0;
}
.gen-info-list .list-group-item img {
  margin-left: 0;
  border-radius: 10px;
}
.image-grid-container > * {
  margin-bottom: 16px;
}
.table-ncmec {
  border-top-right-radius: 0;
  border-top-left-radius: 0;
  border: 1px solid #626366;
  margin-left: 0;
  margin-right: 0;
  margin-bottom: 16px;
  display: inline-block;
}
.table-ncmec table {
  font-family: AvenirLTStd-Black;
  font-size: 13px;
}
.table-ncmec table thead {
  color: #fff;
}
.table-ncmec table thead tr {
  color: #fff;
}
.table-ncmec table thead tr th {
  padding: 10px 10px 10px 20px;
  background: #626366;
}
.table-ncmec table thead tr th:first-child {
  border-top-left-radius: 0;
}
.table-ncmec table thead tr th:last-child {
  border-top-right-radius: 0;
}
.table-ncmec table tbody tr {
  border-bottom: 0;
}
.table-ncmec table tbody tr td {
  padding: 10px 10px 10px 20px;
}
.table-ncmec h5 {
  padding: 0 16px;
}
#accordion .table-ncmec {
  margin-left: 0;
  margin-right: 0;
}
.emphasisBlock {
  padding-left: 8px;
  padding-right: 8px;
  border-bottom: 1px solid #626366;
}
.emphasisBlock .title span {
  width: 59%;
  padding: 20px 0;
}
.internalLinkBlockList,
.externalLinkBlock {
  display: block;
  position: relative;
  padding-left: 32px;
  color: #008DB6;
}
.internalLinkBlockList:before,
.externalLinkBlock:before {
  content: "• ";
  width: 13px;
  position: absolute;
  top: 0;
  left: 0;
  height: 13px;
  z-index: 999;
  display: block;
  background-size: 100%;
  font-size: 35px;
}
#siteSearchResults > p {
  margin-left: 8px;
}
#siteSearchResults dl {
  padding: 0 8px;
}
#siteSearchResults dd {
  padding: 10px 0;
}
#siteSearchResults dd img {
  width: 18px;
  height: 18px;
  transform: translateY(-13%);
}
.siteSearch {
  margin-top: 10px;
  width: 220px;
  margin-left: auto;
  margin-right: auto;
  display: flex;
}
.siteSearch .textField,
.siteSearch .icon {
  padding: 2px;
  width: 90%;
}
.siteSearch .textField {
  border-radius: 5px 0 0 5px;
  box-shadow: none;
  border: 1px solid #404041;
}
.siteSearch .icon {
  background: #404041;
  border-radius: 0 5px 5px 0;
  width: 27px;
  padding: 5px;
  border: 0;
  outline: none;
  margin-right: auto;
  margin-left: auto;
}
.siteSearch .icon img {
  height: 15px;
}
#dafdirectdiv {
  width: 100% !important;
}
.flex-container {
  -webkit-flex-direction: row;
  /* Safari */
  flex-direction: row;
  -webkit-flex-wrap: wrap;
  /* Safari */
  flex-wrap: wrap;
}
.flex-item {
  background: #f1f2f2;
  border: 1px solid gray;
  width: 200px;
  height: 200px;
  display: inline-block;
}
/******************  MK Corporate Partners Page MK-1E1 *********************/
.mk-sm .mk-sm-hidden {
  display: none;
}
.mk-sm .mk-sm-visible {
  display: block;
}
.mk-md .mk-md-hidden {
  display: none;
}
.mk-md .mk-md-visible {
  display: block;
}
.mk-lg .mk-lg-hidden {
  display: none;
}
.mk-lg .mk-lg-visible {
  display: block;
}
.mk-sm .blocks > a.col-sm-1 {
  width: 100%;
  padding: 8px;
}
.mk-sm .blocks > a.col-sm-2 {
  width: 50%;
  padding: 8px;
}
.mk-sm .blocks > a.col-sm-3 {
  width: 33.33333333%;
  padding: 8px;
}
.mk-md .blocks > a.col-md-2 {
  width: 50%;
  padding: 8px;
}
.mk-md .blocks > a.col-md-3 {
  width: 33.33333333%;
  padding: 8px;
}
.mk-md .blocks > a.col-md-4 {
  width: 25%;
  padding: 8px;
}
.mk-md .blocks > a.col-md-5 {
  width: 20%;
  padding: 8px;
}
/* ... */

